@@ -202,6 +202,7 @@ public:
 	menu &get_menu();
 	bool done() const { return (result_ != CONTINUE_DIALOG); }
 	const std::string textbox_text() const { return text_widget_->text();}
+	dialog_textbox& get_textbox() const { return *text_widget_; }
 	const bool option_checked(unsigned int option_index=0);
 	display& get_display() { return disp_; }
 
@@ -218,7 +219,6 @@ protected:
 	//refresh - forces the display to refresh
 	void refresh();
 	label& get_message() const { return *message_; }
-	dialog_textbox& get_textbox() const { return *text_widget_; }
 	dialog_frame& get_frame();
 
 private:
